--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "laravel/nova": "^2.0 || ^3.0"
+    "workup/nova": "^2.0 || ^3.0"
   },
   "require-dev": {
     "orchestra/testbench": "^6.3",
