--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
     }
   ],
   "require": {
-    "php": ">=8.0.0",
-    "laravel/nova": "~4.0"
+    "php": ">=8.0",
+    "laravel/nova": "^4.0"
   },
   "require-dev": {
     "laravel/pint": "^0.2.1",
